# cookiecutter-kaggle

./: README.md  coockiecutter.json  cookiecutter.json  server-setup.sh
{{ coockiecutter.project_name }}/: environment.yaml  setup.sh
{{ coockiecutter.project_name }}/experiments/scripts/evaluation/: mae_evaluation.py
{{ cookiecutter.project_name }}/: .gitignore  Makefile  README.md  conda.yaml  environment.yaml  pyproject.toml  setup.py  setup.sh
{{ cookiecutter.project_name }}/experiments/notebooks/: LitAutoEncoder.ipynb
{{ cookiecutter.project_name }}/experiments/scripts/: auto_encoder.py  lightning_cli_test.py
{{ cookiecutter.project_name }}/experiments/scripts/elastic_net/: elastic_net.py
{{ cookiecutter.project_name }}/experiments/scripts/mnist_classfier/: data_module.py  model.py  train_and_test.py
{{ cookiecutter.project_name }}/{{ cookiecutter.pkg_name }}/: README.md  constants.py  git_utils.py  mlflow_utils.py  paths.py
{{coockiecutter.project_name}}/apps/: README.md
{{coockiecutter.project_name}}/experiments/scripts/training/: logistic_regression.py
